<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/space.from.top"
    tools:context=".activities.MainActivity">

    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding.left.right"
        android:text="@string/instructions"
        android:layout_margin="@dimen/padding.top.bottom"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="@dimen/text.size.toolbar"
        />

    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/btn_maelezo_zaidi"
        style="@style/DopeButton"
        android:textSize="@dimen/text.size.button"
        android:layout_margin="@dimen/margin.button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_instructions"
        android:text="@string/open_tutorial"
        />

    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/btn_view_downloaded"
        style="@style/DopeButton"
        android:textSize="@dimen/text.size.button"
        android:layout_margin="@dimen/margin.button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_maelezo_zaidi"
        android:text="@string/view_downloaded"
        />

    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/btn_fungua_insta"
        style="@style/DopeButton"
        android:textSize="@dimen/text.size.button"
        android:layout_margin="@dimen/margin.button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_view_downloaded"
        android:text="@string/open_instagram"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_home">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
