<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/download_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:paddingLeft="72dp"
        android:paddingRight="72dp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        />

    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/logo_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tigo_ish"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_below="@id/logo"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="0dip"
        android:paddingBottom="32dp"
        />

    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/btn_maelezo_zaidi"
        style="@style/DopeButton"
        android:textSize="@dimen/text.size.button"
        android:layout_margin="@dimen/margin.button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo_words"
        android:text="@string/open_tutorial"
        />

    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/btn_view_downloaded"
        style="@style/DopeButton"
        android:textSize="@dimen/text.size.button"
        android:layout_margin="@dimen/margin.button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_maelezo_zaidi"
        android:text="@string/view_downloaded"
        />

    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/btn_fungua_insta"
        style="@style/DopeButton"
        android:textSize="@dimen/text.size.button"
        android:layout_margin="@dimen/margin.button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_view_downloaded"
        android:text="@string/open_instagram"
        />


    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/tigo_ad_instruction_activity"

        style="@style/TigoAdTextView"
        android:layout_alignParentBottom="true"
        android:text="@string/sample_tigo_ad"

        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:singleLine="true"
         />


    <!-- google ad -->

    <com.google.android.gms.ads.AdView
        android:visibility="gone"
        android:id="@+id/adView_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_home">
    </com.google.android.gms.ads.AdView>




</RelativeLayout>
