<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        fbutton:buttonColor="@color/blue.t"
        fbutton:shadowColor="@color/blue.t.0"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        fbutton:cornerRadius="5dp"

        android:id="@+id/btn_maelezo_zaidi"
        android:text="@string/open_tutorial"

        />

    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        fbutton:buttonColor="@color/blue.t"
        fbutton:shadowColor="@color/blue.t.0"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        fbutton:cornerRadius="5dp"

        android:id="@+id/btn_view_downloaded"
        android:text="@string/view_downloaded"
        />


    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        fbutton:buttonColor="@color/blue.t"
        fbutton:shadowColor="@color/blue.t.0"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        fbutton:cornerRadius="5dp"

        android:id="@+id/btn_fungua_insta"
        android:text="@string/open_instagram"
        />

</LinearLayout>
