<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">


    <ImageView
        android:id="@+id/logo_main_activity"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:adjustViewBounds="true"
        android:alpha="0.4"
        android:scaleType="fitCenter"
        android:src="@drawable/instagram_logo" />

    <com.mj.instashusha.utils.DopeTextView
        style="@style/TextButtonStyle"
        android:text="Instashusha"
        android:textSize="24sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/black.alpha"/>

    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/container_start_instagram"
        style="@style/TextButtonStyle"
        android:text="@string/open_instagram"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="96dp"
        android:background="@color/black.alpha2"/>


    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/container_downloaded"
        style="@style/TextButtonStyle"
        android:text="@string/view_downloaded"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="96dp"
        android:background="@color/black.alpha2"/>

    <com.mj.instashusha.utils.DopeTextView
        android:id="@+id/container_help"
        style="@style/TextButtonStyle"
        android:text="@string/open_tutorial"/>





</LinearLayout>


